tdf#110994 make text-to-text alignment work in standard page mode.

Allow it to align as if there is no grid at all.

Change-Id: I784284a05c1f1323e050e74a5d574a9b11189298
Reviewed-on: https://gerrit.libreoffice.org/43005
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Mark Hung <marklh9@gmail.com>